# bingo

./: .gitignore  3x4.docx  9x9.docx  build.gradle  pyproject.toml
src/bingo/: __init__.py  bingo.py
src/main/java/no/vejmon/bingo/: BingoApplication.java
src/main/resources/: application.yaml
src/test/java/no/vejmon/bingo/: BingoApplicationTests.java
