[project]
name = "bingo"
version = "0.1.0"
description = ""
authors = [
    {name = "Vejmon",email = "vemundhell@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
        "docxtpl[subdoc] (>=0.20.2,<0.21.0)"
]

[tool.poetry]
packages = [{include = "bingo", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
